# Floating-Point-Compression

./: .gitignore  README.md  garbage.txt  run.sh
app/: CMakeLists.txt
app/src/: main.cpp
dataset/: city_temperature.csv  dataexport_20250126T094958.csv  hourlyTemp.csv  readMe.txt
doc/: readMe.txt
lib/: CMakeLists.txt
lib/include/: dataProcessing.hpp  fileReader.hpp
lib/src/: dataProcessing.cpp  fileReader.cpp  ranslassan.cpp
tests/: CMakeLists.txt
tests/src/: test_lib.cpp
